devel
-----

* Optimized Web UI styling for ArangoSearch Views when in read-only mode.

* Fixed a bug in the internal `recalculateCount()` method for adjusting
  collection counts. The bug could have led to count adjustments being
  applied with the wrong sign.

* Removed external file loading in a used 3rd party library (Web UI). 

* More substantial metrics in agency.

* arangodump and arangorestore will now fail when using the `--collection`
  option and none of the specified collections actually exist in the database
  (on dump) or in the dump to restore (on restore). In case some of the specified
  collections exist, arangodump/restore will issue warnings about the invalid
  collections, but will continue to work for the valid collections.

* Improved network send request for more robustness. 

* Added multiple RocksDB configuration options to arangod:
  * `--rocksdb.cache-index-and-filter-blocks` to make the RocksDB block cache quota
    also include RocksDB memtable sizes
  * `--rocksdb.cache-index-and-filter-blocks-with-high-priority` to use cache index
    and filter blocks with high priority making index and filter blocks be less
    likely to be evicted than data blocks
  * `--rocksdb.pin-l0-filter-and-index-blocks-in-cache` make filter and index blocks
    be pinned and only evicted from cache when the table reader is freed
  * `--rocksdb.pin-top-level-index-and-filter` make the top-level index of partitioned
    filter and index blocks pinned and only be evicted from cache when the table reader is freed

* Don't move potentially expensive AQL function calls into loops in the
  `remove-unnecessary-calculations-rule`.

  For example, in the query

      LET x = NOOPT(1..100)
      LET values = SORTED(x)
      FOR j IN 1..100
        FILTER j IN values
        RETURN j

  there is only one use of the `values` variable. So the optimizer can remove
  that variable and replace the filter condition with `FILTER j IN SORTED(x)`.