@@ -1,6 +1,13 @@
 devel
 -----
 
+* Fix crash in execution of non-spliced subqueries if remainder of subquery is skipped.
+
+* Made modification subqueries non-passthrough. The passthrough logic only works
+  if exactly as many output rows are produced as input rows are injected.
+  If the subquery with modification is skipped however this API is violated,
+  we perform the subquery with the modification, but then discard the input if skipped).
+
 * Optimized Web UI styling for ArangoSearch Views when in read-only mode.
 
 * Fixed a bug in the internal `recalculateCount()` method for adjusting
